--- a/blog/templates/blog/wrapper.html
+++ b/blog/templates/blog/wrapper.html
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="#">Login</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Register</a>
+                    <a class="nav-link" href="{% url 'register' %}">Register</a>
                     </li>
                 </ul>
                 </div>
@@ -56,13 +56,13 @@
         </div>
         <div class="col-md-4">
           <div class="content-section border px-4 py-4">
-            <h3>Our Sidebar</h3>
-            <p class='text-muted'>You can put any information here you'd like.
+            <h3>Sidebar</h3>
+            <p class='text-muted'>Some information.
               <ul class="list-group">
                 <li class="list-group-item list-group-item-light">Latest Posts</li>
                 <li class="list-group-item list-group-item-light">Announcements</li>
                 <li class="list-group-item list-group-item-light">Calendars</li>
-                <li class="list-group-item list-group-item-light">etc</li>
+                <li class="list-group-item list-group-item-light">Info</li>
               </ul>
             </p>
           </div>
