--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,11 +1,12 @@
 {% extends "blog/wrapper.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section border mb-4 px-4 py-4">
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Join Now</legend>
-                {{ form }}
+                {{ form|crispy }}
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Sing Up</button>
