--- a/blog/templates/blog/wrapper.html
+++ b/blog/templates/blog/wrapper.html
@@ -22,24 +22,35 @@
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                    <a class="nav-link" href="{% url 'blog-home' %}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                    </li>
-                </ul>
+                  <ul class="navbar-nav">
+                      <li class="nav-item">
+                      <a class="nav-link" href="{% url 'blog-home' %}">Home</a>
+                      </li>
+                      <li class="nav-item">
+                      <a class="nav-link" href="#">About</a>
+                      </li>
+                  </ul>
                 </div>   
                 <div class="navbar-nav">
-                <ul class="navbar-nav">
+                  {% if user.is_authenticated %}
+                  <ul class="navbar-nav">
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
+                      <a class="nav-link" href="{% url 'profile'%}">Profile</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="{% url 'register' %}">Register</a>
+                      <a class="nav-link" href="{% url 'logout'%}">Logout</a>
                     </li>
                 </ul>
+                  {% else %}
+                  <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login'%}">Login</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="{% url 'register' %}">Register</a>
+                      </li>
+                  </ul>
+                  {% endif %}
                 </div>
             </div>  
           </nav>
