--- a/blog/templates/blog/wrapper.html
+++ b/blog/templates/blog/wrapper.html
@@ -60,7 +60,7 @@
         <div class="col-md-8 ">
           {% if messages %}
             {% for message in messages%}
-              <div class="alert alert-{{ messages.tags }}">{{ message }}</div>
+              <div class="alert alert-success">{{ message }}</div>
             {% endfor %}
           {% endif %}
           {% block content %}{% endblock %}
