--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,4 +1,24 @@
 {% extends "blog/wrapper.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
-    <h1>{{ user.username }}</h1>
+    <div class="content-section p-3 border">
+        <div class="media">
+            <img src="{{ user.profile.image.url}}" class="rounded-circle" style="width: 150px; height: 150px;">
+            <div class="media-body pl-5">
+                <h2 class="account-heading">{{ user.username }}</h2>
+                <p class="text-secondary">{{user.email}}</p>
+            </div>
+        </div>
+        <form class="pt-3" method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Profile Info</legend>
+                {{ u_form|crispy }}
+                {{ p_form|crispy }}
+            </fieldset>
+            <div class="form-group">
+                <button class="btn btn-outline-info" type="submit">Update</button>
+            </div>
+        </form>
+    </div>
 {% endblock content %}
