--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,13 +1,14 @@
 {% extends "blog/wrapper.html" %}
 {% block content %}
     {% for post in posts %}
-        <article class="content-section">
-          <div class="media-body border mb-4 px-4 py-4">
+        <article class="media content-section border mb-4 px-4 py-4">
+          <img src="{{ post.author.profile.image.url }}" class="rounded-circle mr-3" style="height: 65px; width: 65px;">
+          <div class="media-body">
             <div class="article-metadata border-bottom">
               <a class="mr-2" href="#">{{ post.author }}</a>
               <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
             </div>
-            <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+            <h2><a class="article-title text-dark" href="#">{{ post.title }}</a></h2>
             <p class="article-content">{{ post.content }}</p>
           </div>
         </article>
